--- a/layout/_core.scss
+++ b/layout/_core.scss
@@ -2,6 +2,7 @@
 	CORE STYLES
 \*------------------------------------*/
 
+
 /*--------------------------------
 	Box sizing
 */
@@ -20,7 +21,7 @@
 */
 
 html {
-    font-size: 100%;
+    font-size: $html-font-size;
     -webkit-text-size-adjust: none;
 }
 
